Add directional and spot lights and a button to toggle between them

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <canvas id="scene"></canvas>
+    <button class="toggle-lights" onclick="toggleLights()">luz</button>
     <script src="index.ts"></script>
   </body>
 </html>
